--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -127,7 +127,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-    const stripe = Stripe("pk_test_51QNt6TBtLo3QmqAZZewDNzwDWTVtXOnM5l7OOfbVVVUJjl7QoslbwvNKpxrNkMMCI0Rakuao4qkPTyr9RkbhzLg600q6KXdcCN");
+    const stripe = Stripe("PROVIDE YOUR KEY");
 
     document.querySelectorAll(".product-card").forEach(card => {
     const decrementBtn = card.querySelector(".decrement");
